[project]
name = "eros_api"
version = "0.0.1"
authors = [
  { name="cop-discord", email="cop@catgir.ls" },
]
description = "A package for Pulling data from all social media platforms"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ['aiohttp>=3.6.1', 'orjson>=3.8.0']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/cop-discord/eros"
Issues = "https://github.com/cop-discord/eros/issues"